--- a/FileNumberer.Lib/FileNumberer.Lib.csproj
+++ b/FileNumberer.Lib/FileNumberer.Lib.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\AssemblyVersionInfo.cs" />
     <Compile Include="FileNamers\DefaultFileNamer.cs" />
     <Compile Include="FileNamers\IFileNamer.cs" />
     <Compile Include="FileNumbererArgs.cs" />
